--- a/yellow/CMakeLists.txt
+++ b/yellow/CMakeLists.txt
@@ -4,4 +4,4 @@ project(test)
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_FLAGS "-std=c++11 -stdlib=libc++")
 
-add_executable(test w4/build_expression2.cpp)
+add_executable(test w5/final.cpp)
