--- a/red/CMakeLists.txt
+++ b/red/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.12)
+#set(CMAKE_CXX_COMPILER "/usr/local/bin/gcc-8")
 project(red)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 14)
 
-add_executable(red w1/deque.cpp)
+add_executable(red w1/paginator.cpp)
