--- a/red/CMakeLists.txt
+++ b/red/CMakeLists.txt
@@ -6,4 +6,4 @@ set(CMAKE_CXX_STANDARD 14)
 #set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -gdwarf-3")
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libstdc++")
 
-add_executable(red w3/simple_vector.h w3/simple_vector.cpp)
+add_executable(red w3/linked_list.cpp)
