--- a/red/CMakeLists.txt
+++ b/red/CMakeLists.txt
@@ -1,7 +1,11 @@
 cmake_minimum_required(VERSION 3.12)
-project(red)
+project(red C CXX)
 
 set(CMAKE_CXX_STANDARD 14)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -Wall -Wfatal-errors")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -Wall -Wfatal-errors -pthread")
 
-add_executable(red w5/priority_collection.cpp)
+find_package( Threads )
+
+add_executable(red w5/explore_key_words.cpp)
+
+target_link_libraries(red ${CMAKE_THREAD_LIBS_INIT})
